# ssh-term

./: .gitignore  README.md  pyproject.toml
src/ssh_term/: __init__.py  __main__.py  app.py  theme.py
src/ssh_term/models/: auth.py  config.py
src/ssh_term/screens/: auth_screen.py  confirm_dialog.py  connection_form.py  dashboard.py  file_transfer.py  terminal_screen.py
src/ssh_term/services/: sftp_manager.py  ssh_manager.py
src/ssh_term/styles/: app.tcss  auth.tcss  dashboard.tcss  file_transfer.tcss  form.tcss  terminal.tcss
src/ssh_term/widgets/: connection_table.py  local_file_tree.py  remote_file_tree.py  terminal_emulator.py  transfer_progress.py
