[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssh-term"
version = "0.2.0"
description = "A minimalistic TUI SSH terminal manager"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0.0",
    "rich>=13.0.0",
    "paramiko>=3.4.0",
    "bcrypt>=4.0.0",
    "pyte>=0.8.2",
    "cryptography>=42.0.0",
]

[project.scripts]
ssh-term = "ssh_term.__main__:main"
